--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -772,6 +772,8 @@
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.filter.label": "Filtre",
 	"stash.widgets.filter_type": "Tipus de filtre",
+	"stash.widgets.hideLogo.help": "Amagar el logotip de Nuclia de la barra de cerca",
+	"stash.widgets.hideLogo.label": "Amagar logotip",
 	"stash.widgets.hideSources.help": "Amaga les fonts utilitzades per generar la resposta",
 	"stash.widgets.hideSources.label": "Amaga les fonts",
 	"stash.widgets.hideThumbnails.help": "Amaga les miniatures als resultats de la cerca",
