--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -775,6 +775,8 @@
 	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.filter.label": "Filter",
 	"stash.widgets.filter_type": "Filter types",
+	"stash.widgets.hideLogo.help": "Hide Nuclia logo from search bar",
+	"stash.widgets.hideLogo.label": "Hide logo",
 	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
 	"stash.widgets.hideSources.label": "Hide sources",
 	"stash.widgets.hideThumbnails.help": "Hide thumbnails in search results",
