Allow to define user prompts for the different generative models

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -654,6 +654,9 @@
 	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
 	"stash.create.semantic_model.label": "Idiomes",
 	"stash.create.title": "Crea una caixa de coneixement",
+	"stash.create.user_prompts.examples": "Exemples",
+	"stash.create.user_prompts.prompt": "Prompt personalitzado",
+	"stash.create.user_prompts.system": "Comportament personalitzat",
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
