--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -657,6 +657,9 @@
 	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.semantic_model.label": "Languages",
 	"stash.create.title": "Create a knowledge box",
+	"stash.create.user_prompts.examples": "Examples",
+	"stash.create.user_prompts.prompt": "Custom prompt",
+	"stash.create.user_prompts.system": "Custom behavior",
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
