--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -654,6 +654,9 @@
 	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
 	"stash.create.semantic_model.label": "Idiomas",
 	"stash.create.title": "Crea una caja de conocimiento",
+	"stash.create.user_prompts.examples": "Ejemplos",
+	"stash.create.user_prompts.prompt": "Prompt personalizado",
+	"stash.create.user_prompts.system": "Comportamiento personalizado",
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
