--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -650,6 +650,9 @@
 	"stash.create.semantic_model.help": "Indiquez les langues utilisées dans les informations que vous téléchargerez dans votre KB.",
 	"stash.create.semantic_model.label": "Les langues",
 	"stash.create.title": "Créer une boîte de connaissances",
+	"stash.create.user_prompts.examples": "Exemples",
+	"stash.create.user_prompts.prompt": "Prompt personnalisé",
+	"stash.create.user_prompts.system": "Comportement personnalisé",
 	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
 	"stash.create.visual_labeling.label": "Annoter par sélection",
 	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette boîte de connaissances (par défaut, la zone du compte)",
