allow to use labels in connectors

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -6,6 +6,7 @@
 	"generic.delete": "Eliminar",
 	"generic.logout": "Sortir",
 	"generic.save": "Desar",
+	"generic.select_tags": "Selecciona etiquetes",
 	"generic.server_down": "El servidor de sincronització està inactiu",
 	"generic.server_up": "El servidor de sincronització està activat",
 	"generic.switch_account": "Canviar de compte",
@@ -31,6 +32,7 @@
 	"pastanaga.datetime.yesterday": "Ahir",
 	"upload.add-connector": "Afegir connector",
 	"upload.connectors": "Connectors",
+	"upload.labels": "Apliqueu etiquetes als recursos penjats mitjançant aquest connector",
 	"upload.refresh": "Actualització {{field}}",
 	"upload.s3.region": "Regió",
 	"upload.s3.region_help": "Per exemple: eu-west-3",
