--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -6,6 +6,7 @@
 	"generic.delete": "Eliminar",
 	"generic.logout": "Salir",
 	"generic.save": "Guardar",
+	"generic.select_tags": "Selecciona etiquetas",
 	"generic.server_down": "El servidor de sincronización está inactivo",
 	"generic.server_up": "El servidor de sincronización está activo",
 	"generic.switch_account": "Cambia de cuenta",
@@ -31,6 +32,7 @@
 	"pastanaga.datetime.yesterday": "Ayer",
 	"upload.add-connector": "Añadir conector",
 	"upload.connectors": "Conectores",
+	"upload.labels": "Aplicar etiquetas a los recursos cargados a través de este conector",
 	"upload.refresh": "Refrescar {{field}}",
 	"upload.s3.region": "Región",
 	"upload.s3.region_help": "Por ejemplo: eu-west-3",
