--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -6,6 +6,7 @@
 	"generic.delete": "Supprimer",
 	"generic.logout": "Déconnexion",
 	"generic.save": "Enregistrer",
+	"generic.select_tags": "Sélectionnez les étiquettes",
 	"generic.server_down": "Le serveur de synchronisation est en panne",
 	"generic.server_up": "Le serveur de synchronisation est opérationnel",
 	"generic.switch_account": "Changer de compte",
@@ -31,6 +32,7 @@
 	"pastanaga.datetime.yesterday": "Hier",
 	"upload.add-connector": "Ajouter un connecteur",
 	"upload.connectors": "Connecteurs",
+	"upload.labels": "Appliquer des étiquettes aux ressources téléchargées via ce connecteur",
 	"upload.refresh": "Rafraîchir {{field}}",
 	"upload.s3.region": "Région",
 	"upload.s3.region_help": "par exemple: eu-west-3",
