--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
 	"generic.delete": "Delete",
 	"generic.logout": "Log out",
 	"generic.save": "Save",
+	"generic.select_tags": "Select the labels",
 	"generic.server_down": "Sync server is down",
 	"generic.server_up": "Sync server is up",
 	"generic.switch_account": "Switch account",
@@ -31,6 +32,7 @@
 	"pastanaga.datetime.yesterday": "Yesterday",
 	"upload.add-connector": "Add connector",
 	"upload.connectors": "Connectors",
+	"upload.labels": "Apply labels to resources uploaded through this connector",
 	"upload.refresh": "Refresh {{field}}",
 	"upload.s3.region": "Region",
 	"upload.s3.region_help": "e.g. us-east-1",
