display success/failure message after saving settings

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -632,6 +632,7 @@
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
+	"stash.config.failure": "S'ha produït un error en desar la configuració.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
@@ -641,6 +642,7 @@
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
+	"stash.config.success": "La nova configuració s'ha desat correctament.",
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la caixa de coneixament.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
