--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -635,6 +635,7 @@
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
+	"stash.config.failure": "An error occured when saving the settings.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
@@ -644,6 +645,7 @@
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Use own key",
+	"stash.config.success": "The new settings have been saved successfully.",
 	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your knowledge box.",
 	"stash.confirm_delete_user.title": "Are you sure  you want to delete this user?",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
