--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -632,6 +632,7 @@
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
+	"stash.config.failure": "Se produjo un error al guardar la configuración.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
@@ -641,6 +642,7 @@
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilizar key propia",
+	"stash.config.success": "La nueva configuración se ha guardado correctamente.",
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la caja de conocimiento.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un cuadro de conocimiento. Póngase en contacto con su administrador.",
