--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -628,6 +628,7 @@
 	"standalone.upload-no-nua-key": "Vous n'êtes pas connecté au serveur <strong>nuclia.cloud</strong> et les nouvelles données ne seront pas traitées.",
 	"stash.add_user": "Ajouter un utilisateur",
 	"stash.added_user": "{{user}} a été ajouté",
+	"stash.config.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
 	"stash.config.key.azure_openai": "Clé Azure OpenAI",
 	"stash.config.key.openai": "Clé OpenAI",
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
@@ -637,6 +638,7 @@
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.palm": "Google PaLM 2 (bêta)",
 	"stash.config.own_key": "Utiliser sa propre clé",
+	"stash.config.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre boîte de connaissances.",
 	"stash.confirm_delete_user.title": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
 	"stash.contact_admin": "Vous n'êtes pas autorisé à créer une boîte de connaissances. Contactez votre administrateur.",
