[sc-7331] Display error toast when loading resources fails

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -540,6 +540,7 @@
 	"resource.entities.quantity": "Quantitat",
 	"resource.entities.time": "Temps",
 	"resource.entities.work_of_art": "Obres",
+	"resource.error.loading-failed": "No s'han pogut carregar els recursos.",
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
