--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -543,6 +543,7 @@
 	"resource.entities.quantity": "Quantity",
 	"resource.entities.time": "Time",
 	"resource.entities.work_of_art": "Art",
+	"resource.error.loading-failed": "Loading resources failed.",
 	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.extra-metadata.label": "Extra metadata",
 	"resource.failed_resources_popover": "Processing failed files",
