[sc-6693] Update thumbnail flow
- remove radio buttons when several thumbnails
- highlight selected thumbnail with a border
- don't save thumbnail until user clicks on save
- add ability to delete unselected thumbnails

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -604,6 +604,7 @@
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
+	"resource.thumbnail.delete": "Suprimeix la miniatura",
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.thumbnail.label": "Miniatura",
