--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -600,9 +600,10 @@
 	"resource.status_unknown": "Aucun statut n'est encore disponible pour cette file d'attente de traitement de compte",
 	"resource.summary": "Résumé",
 	"resource.text": "Texte",
+	"resource.thumbnail.delete": "Supprimer la vignette",
 	"resource.thumbnail.drop": "Déposez l'image ou cliquez ici",
 	"resource.thumbnail.help": "Téléchargez une image ou choisissez parmi les suggestions",
-	"resource.thumbnail.label": "La vignette",
+	"resource.thumbnail.label": "Vignette",
 	"resource.title": "Titre de la ressource",
 	"resource.tooltip.add-field": "Ajouter un champ",
 	"resource.tooltip.annotation": "Annotation",
