[sc-7418] Modify prompt form styles

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -660,7 +660,9 @@
 	"stash.create.title": "Crea una caixa de coneixement",
 	"stash.create.user_prompts.examples": "Exemples",
 	"stash.create.user_prompts.prompt": "Prompt personalitzado",
+	"stash.create.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
 	"stash.create.user_prompts.system": "Comportament personalitzat",
+	"stash.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
 	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
