--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -663,7 +663,9 @@
 	"stash.create.title": "Create a knowledge box",
 	"stash.create.user_prompts.examples": "Examples",
 	"stash.create.user_prompts.prompt": "Custom prompt",
+	"stash.create.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
 	"stash.create.user_prompts.system": "Custom behavior",
+	"stash.create.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
 	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this knowledge box (defaults to the account’s zone)",
