--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -660,7 +660,9 @@
 	"stash.create.title": "Crea una caja de conocimiento",
 	"stash.create.user_prompts.examples": "Ejemplos",
 	"stash.create.user_prompts.prompt": "Prompt personalizado",
+	"stash.create.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
 	"stash.create.user_prompts.system": "Comportamiento personalizado",
+	"stash.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
 	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta caja de conocimiento. De forma predeterminada aparece la zona escogida en el Account",
