--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -656,7 +656,9 @@
 	"stash.create.title": "Créer une boîte de connaissances",
 	"stash.create.user_prompts.examples": "Exemples",
 	"stash.create.user_prompts.prompt": "Prompt personnalisé",
+	"stash.create.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
 	"stash.create.user_prompts.system": "Comportement personnalisé",
+	"stash.create.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
 	"stash.create.visual_labeling.label": "Annoter par sélection",
 	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette boîte de connaissances (par défaut, la zone du compte)",
