Add "previous" and "next" button next to back to resource list

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -611,11 +611,14 @@
 	"resource.title": "Título del recurso",
 	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.annotation": "Anotación",
+	"resource.tooltip.back-to-resources": "Volver a la lista de recursos",
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.delete": "Borrar",
 	"resource.tooltip.edition": "Edición",
+	"resource.tooltip.next-resource": "Siguiente recurso",
 	"resource.tooltip.pdf-annotation": "Anotar por selección",
 	"resource.tooltip.preview": "Avance",
+	"resource.tooltip.previous-resource": "Recurso anterior",
 	"resource.tooltip.reprocess": "Reprocesar",
 	"resource.upload_via_desktop": "Subir con la Desktop app",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
