--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -611,11 +611,14 @@
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.annotation": "Anotació",
+	"resource.tooltip.back-to-resources": "Torna a la llista de recursos",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.delete": "Suprimeix",
 	"resource.tooltip.edition": "Edició",
+	"resource.tooltip.next-resource": "Següent recurs",
 	"resource.tooltip.pdf-annotation": "Anotar per selecció",
 	"resource.tooltip.preview": "Vista prèvia",
+	"resource.tooltip.previous-resource": "Recurs anterior",
 	"resource.tooltip.reprocess": "Reprocessament",
 	"resource.upload_via_desktop": "Pujar amb la Desktop app",
 	"resource.visible_columns_dropdown": "Columnes mostrades",
