--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -607,11 +607,14 @@
 	"resource.title": "Titre de la ressource",
 	"resource.tooltip.add-field": "Ajouter un champ",
 	"resource.tooltip.annotation": "Annotation",
+	"resource.tooltip.back-to-resources": "Retour à la liste des ressources",
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.delete": "Effacer",
 	"resource.tooltip.edition": "Édition",
+	"resource.tooltip.next-resource": "Ressource suivante",
 	"resource.tooltip.pdf-annotation": "Annoter par sélection",
 	"resource.tooltip.preview": "Aperçu",
+	"resource.tooltip.previous-resource": "Ressource précédente",
 	"resource.tooltip.reprocess": "Retraiter",
 	"resource.upload_via_desktop": "Télécharger via l'application de bureau",
 	"resource.visible_columns_dropdown": "Colonnes affichées",
