Add german and portuguese translations on common lib

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -113,6 +113,7 @@
 	"activity.resource": "Recurs",
 	"activity.search": "Consultes",
 	"activity.subtitle": "Activitat de la Caixa de coneixement dels últims 30 dies",
+	"activity.timestamp": "Segell de temps",
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
@@ -121,6 +122,7 @@
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
+	"billing.budget": "Pressupost sota demanda",
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_calculator_help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
@@ -611,14 +613,11 @@
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.annotation": "Anotació",
-	"resource.tooltip.back-to-resources": "Torna a la llista de recursos",
 	"resource.tooltip.classification": "Classificació",
 	"resource.tooltip.delete": "Suprimeix",
 	"resource.tooltip.edition": "Edició",
-	"resource.tooltip.next-resource": "Següent recurs",
 	"resource.tooltip.pdf-annotation": "Anotar per selecció",
 	"resource.tooltip.preview": "Vista prèvia",
-	"resource.tooltip.previous-resource": "Recurs anterior",
 	"resource.tooltip.reprocess": "Reprocessament",
 	"resource.upload_via_desktop": "Pujar amb la Desktop app",
 	"resource.visible_columns_dropdown": "Columnes mostrades",
