--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -113,6 +113,7 @@
 	"activity.resource": "Recurso",
 	"activity.search": "Consultas",
 	"activity.subtitle": "Actividad de la Caja de conocimiento de los últimos 30 días",
+	"activity.timestamp": "Sello de tiempo",
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
@@ -121,6 +122,7 @@
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
+	"billing.budget": "Presupuesto bajo demanda",
 	"billing.budget_calculator": "Calculadora de presupuesto",
 	"billing.budget_calculator_help": "La calculadora de presupuesto te permite hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
@@ -611,14 +613,11 @@
 	"resource.title": "Título del recurso",
 	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.annotation": "Anotación",
-	"resource.tooltip.back-to-resources": "Volver a la lista de recursos",
 	"resource.tooltip.classification": "Clasificación",
 	"resource.tooltip.delete": "Borrar",
 	"resource.tooltip.edition": "Edición",
-	"resource.tooltip.next-resource": "Siguiente recurso",
 	"resource.tooltip.pdf-annotation": "Anotar por selección",
 	"resource.tooltip.preview": "Avance",
-	"resource.tooltip.previous-resource": "Recurso anterior",
 	"resource.tooltip.reprocess": "Reprocesar",
 	"resource.upload_via_desktop": "Subir con la Desktop app",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
