--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -7,11 +7,11 @@
 	"account.admin.make_admin": "Faire administrateur",
 	"account.admin.warning": "Si vous donnez le rôle d'administrateur à cet utilisateur, il pourra accéder à toutes les options et les modifier.",
 	"account.billing": "Paiement et abonnement",
-	"account.chart_error_media_seconds": "Impossible de récupérer les données relatives aux heures d'ouverture des médias",
+	"account.chart_error_media_seconds": "Impossible de récupérer les données \"Heures médias\"",
 	"account.chart_error_processing_status": "Impossible de récupérer les données \"ressources en attente de traitement\".",
 	"account.chart_error_searches": "Impossible de récupérer les données \"Recherches\".",
-	"account.chart_error_train_seconds": "Impossible de récupérer les données \"Heures de train\".",
-	"account.chart_media_seconds": "Heures d'ouverture des médias",
+	"account.chart_error_train_seconds": "Impossible de récupérer les données \"Heures d'entrainement\".",
+	"account.chart_media_seconds": "Heures de média",
 	"account.chart_number_resources": "Nombre de ressources",
 	"account.chart_range_label": "Dernier {{hours}}",
 	"account.chart_searches": "Recherches",
@@ -115,6 +115,9 @@
 	"activity.search": "Requêtes",
 	"activity.subtitle": "Activité de la boîte de connaissances des 30 derniers jours",
 	"activity.timestamp": "Horodatage",
+	"autocomplete.section.main": "Suggestion de concept clé",
+	"autocomplete.section.next_words": "Mots suggérés",
+	"autocomplete.section.paragraph": "Paragraphe suggéré",
 	"billing.address": "Adresse",
 	"billing.already_available": "Déjà disponible",
 	"billing.amount": "Montant",
@@ -288,6 +291,8 @@
 	"feedback.reason.unused": "Je n'utilise pas assez le service",
 	"feedback.subtitle": "Avant de partir, merci de nous indiquer la raison pour laquelle vous quittez Nuclia :",
 	"feedback.title": "Nous sommes tristes de vous voir partir !",
+	"filter.search_ontology": "Ontologie de recherche",
+	"filter.suggested_classification": "Classement suggéré",
 	"generic.accept": "Accepter",
 	"generic.actions": "Actions",
 	"generic.add": "Ajouter",
@@ -348,6 +353,7 @@
 	"generic.origin": "Origine",
 	"generic.owner": "Propriétaire",
 	"generic.page": "Page",
+	"generic.pagination": " {{current}} sur {{total}}",
 	"generic.preferences": "Préférences",
 	"generic.presence": "Présence",
 	"generic.previous": "Page précédente",
@@ -389,6 +395,7 @@
 	"generic.yes": "Oui",
 	"generic.zone": "Zone de traitement",
 	"generic.zone_and_provider": "Zone d'approvisionnement et de transformation",
+	"input.placeholder": "Chercher",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
 	"label-set.add-button": "Ajouter nouveau",
 	"label-set.delete.confirm-description": "La suppression du jeu d'étiquettes supprimera également toutes ses étiquettes. Vous ne pouvez pas annuler cette action. Cela peut également affecter les formations en cours et les suggestions générées.",
@@ -468,7 +475,7 @@
 	"ner-management.page-title": "Gestion des NER",
 	"ner-remove-family-dialog.description": "Si vous supprimez une famille NER, vous ne pourrez plus annoter les ressources avec elle. Mais les annotations déjà effectuées avec des entités de cette famille seront toujours visibles sur vos ressources.",
 	"ner-remove-family-dialog.title": "Êtes-vous sûr de vouloir supprimer \"{{familyName}}\" ?",
-	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM jj, YYYY\")",
+	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mois",
 	"pastanaga.calendar.years": "Années",
 	"pastanaga.cancel": "Annuler",
@@ -607,14 +614,11 @@
 	"resource.title": "Titre de la ressource",
 	"resource.tooltip.add-field": "Ajouter un champ",
 	"resource.tooltip.annotation": "Annotation",
-	"resource.tooltip.back-to-resources": "Retour à la liste des ressources",
 	"resource.tooltip.classification": "Classification",
 	"resource.tooltip.delete": "Effacer",
 	"resource.tooltip.edition": "Édition",
-	"resource.tooltip.next-resource": "Ressource suivante",
 	"resource.tooltip.pdf-annotation": "Annoter par sélection",
 	"resource.tooltip.preview": "Aperçu",
-	"resource.tooltip.previous-resource": "Ressource précédente",
 	"resource.tooltip.reprocess": "Retraiter",
 	"resource.upload_via_desktop": "Télécharger via l'application de bureau",
 	"resource.visible_columns_dropdown": "Colonnes affichées",
