[sc-7334] Edit flow header improvements
- Remove add field action from the header, and place it on the field list instead
- Replace reprocess and delete buttons by a dropdown
- Prevent deletion to be triggered more than once (add `take(1)` after switching to `this.editResource.resource`)

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -572,6 +572,7 @@
 	"resource.menu.annotate": "Anotar",
 	"resource.menu.classify": "Classificar",
 	"resource.menu.edit": "Edita",
+	"resource.menu.label": "Més",
 	"resource.origin.collaborators": "Col·laboradors",
 	"resource.origin.collaborators-helper": "Llista de col·laboradors separats per comes",
 	"resource.origin.created": "Data creació",
