--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -575,6 +575,7 @@
 	"resource.menu.annotate": "Annotate",
 	"resource.menu.classify": "Classify",
 	"resource.menu.edit": "Edit",
+	"resource.menu.label": "More",
 	"resource.origin.collaborators": "Collaborators",
 	"resource.origin.collaborators-helper": "Comma-separated list of collaborators",
 	"resource.origin.created": "Created",
@@ -612,7 +613,7 @@
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.thumbnail.label": "Thumbnail",
 	"resource.title": "Resource title",
-	"resource.tooltip.add-field": "Add a field",
+	"resource.tooltip.add-field": "Add field",
 	"resource.tooltip.annotation": "Annotation",
 	"resource.tooltip.back-to-resources": "Back to resource list",
 	"resource.tooltip.classification": "Classification",
