--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -26,5 +26,59 @@
 	"login.error.unknown_login_challenge": "Ungültige login_challenge",
 	"login.full_name": "Vollständiger Name",
 	"login.google-workspace": "Google Workspace",
-	"login.have_account": "Sie haben noch kein Konto?"
+	"login.have_account": "Sie haben noch kein Konto?",
+	"login.have_account_already": "Hast du schon ein Konto?",
+	"login.login": "Einloggen",
+	"login.password": "Passwort",
+	"login.recover": "Passwort wiederherstellen",
+	"login.recover_help": "Probleme beim Einloggen?",
+	"login.resend_email": "Sende die E-Mail erneut",
+	"login.scope.kbs_read": "Sehen Sie sich Ihre Wissensboxen an",
+	"login.scope.kbs_write": "Ändern Sie Ihre Wissensboxen",
+	"login.sign-up-with": "Mit {{provider}} anmelden",
+	"login.signup": "Anmelden",
+	"login.subtitle": "Aus Ihren internen Daten die richtigen Antworten liefern.",
+	"login.title": "Willkommen in Nuclia",
+	"login.token_expired": "Token ist abgelaufen",
+	"login.try_again": "Bitte versuchen Sie es erneut oder setzen Sie Ihr Passwort unten zurück.",
+	"login.wrong_email": "Falsche E-mail?",
+	"onboarding.account_creation": "Konto-Erstellung…",
+	"onboarding.company": "Für welches Unternehmen arbeiten Sie?",
+	"onboarding.consent": "Durch die Nutzung dieses Produkts akzeptieren Sie die <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Allgemeinen Geschäftsbedingungen</a> und die <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a>.",
+	"onboarding.get_started": "Loslegen",
+	"onboarding.host_db": "Möchten Sie die Datenbank in Ihrer Infrastruktur hosten?",
+	"onboarding.host_db_help": "Dies hat keinen Einfluss auf das Benutzererlebnis",
+	"onboarding.host_db_no": "Nein, ich nutze lieber die Cloud von Nuclia",
+	"onboarding.host_db_yes": "Ja, ich werde NucliaDB in meiner Infrastruktur hosten",
+	"onboarding.invalid_phone_code": "Ungültiger Code",
+	"onboarding.invalid_phone_number": "Ungültige Telefonnummer",
+	"onboarding.kb_creation": "Speichererstellung…",
+	"onboarding.org_size": "Wie groß ist Ihre Organisation?",
+	"onboarding.phone": "Telefonnummer",
+	"onboarding.setting_up": "⏳ ​ Wir richten Ihr Konto ein",
+	"onboarding.setting_up_subtitle": "Ihr Konto ist in weniger als einer Minute fertig!",
+	"onboarding.storage_zone": "Ihre Daten werden in Europa gehostet. Wenn Sie möchten, dass Ihre Daten an anderer Stelle gehostet werden, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">füllen Sie dieses Formular aus</a>.",
+	"onboarding.subtitle": "Ein paar kurze Fragen und schon können Sie loslegen.",
+	"onboarding.title": "👋​ Willkommen in Nuclia!",
+	"onboarding.updates": "Erhalten Sie gelegentlich Updates über Nuclia",
+	"onboarding.use_case.ai_training": "KI-Modelltraining",
+	"onboarding.use_case.global_search": "Globale Site-Suche",
+	"onboarding.use_case.other": "Andere",
+	"onboarding.use_case.research_analysis": "Forschung und Analyse",
+	"onboarding.use_case.support": "Kunden-/Mitarbeiterbetreuung",
+	"onboarding.use_case.workspace_search": "Arbeitsbereichssuche",
+	"onboarding.use_case_label": "Was ist Ihr Hauptanwendungsfall?",
+	"recover.description": "Passwort vergessen? Lasst uns das beheben. Geben Sie einfach die E-Mail-Adresse ein, mit der Sie sich registriert haben, und wir starten den Wiederherstellungsvorgang.",
+	"recover.gologin": "Gehen Sie zur Anmeldeseite",
+	"recover.gologin_help": "Erinnern Sie sich an Ihr Passwort?",
+	"recover.recover": "Genesen",
+	"recover.title": "ERHALTEN SIE IHR PASSWORT",
+	"recover.verify": "Überprüfen Sie Ihre E-Mails und verwenden Sie den bereitgestellten Link, um Ihr Passwort zu ändern",
+	"validation.company-email": "Bitte verwenden Sie eine Firmen-E-Mail",
+	"validation.email": "Geben Sie eine gültige E-Mail-Adresse ein",
+	"validation.password_minlength": "Das Passwort muss mindestens 8 Zeichen lang sein",
+	"validation.password_mismatch": "Passwort stimmt nicht überein",
+	"validation.password_required": "Wähle ein Passwort",
+	"validation.required": "Pflichtfeld",
+	"validation.required_short": "Erforderlich"
 }
