--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -26,5 +26,59 @@
 	"login.error.unknown_login_challenge": "Login_challenge inválido",
 	"login.full_name": "Nome completo",
 	"login.google-workspace": "Google Workspace",
-	"login.have_account": "Não tem uma conta?"
+	"login.have_account": "Não tem uma conta?",
+	"login.have_account_already": "Já tem uma conta?",
+	"login.login": "Entrar",
+	"login.password": "Senha",
+	"login.recover": "Recuperar Senha",
+	"login.recover_help": "Problemas para fazer login?",
+	"login.resend_email": "Reenvie o e-mail",
+	"login.scope.kbs_read": "Veja suas caixas de conhecimento",
+	"login.scope.kbs_write": "Modifique suas caixas de conhecimento",
+	"login.sign-up-with": "Inscreva-se com {{provider}}",
+	"login.signup": "Inscrever-se",
+	"login.subtitle": "Fornecendo as respostas certas a partir de seus dados internos.",
+	"login.title": "Bem-vindo à Nuclia",
+	"login.token_expired": "O token expirou",
+	"login.try_again": "Tente novamente ou redefina sua senha abaixo.",
+	"login.wrong_email": "E-mail errado?",
+	"onboarding.account_creation": "Criação de conta…",
+	"onboarding.company": "Para qual empresa você trabalha?",
+	"onboarding.consent": "Ao usar este produto, você aceita os <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termos e Condições</a> e a <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>.",
+	"onboarding.get_started": "Iniciar",
+	"onboarding.host_db": "Você deseja hospedar o banco de dados em sua infraestrutura?",
+	"onboarding.host_db_help": "Isso não afeta a experiência do usuário",
+	"onboarding.host_db_no": "Não, prefiro usar a nuvem da Nuclia",
+	"onboarding.host_db_yes": "Sim, hospedarei o NucliaDB em minha infraestrutura",
+	"onboarding.invalid_phone_code": "Código inválido",
+	"onboarding.invalid_phone_number": "Número de telefone inválido",
+	"onboarding.kb_creation": "Criação de armazenamento…",
+	"onboarding.org_size": "Qual é o tamanho da sua organização?",
+	"onboarding.phone": "Número de telefone",
+	"onboarding.setting_up": "⏳ ​ Estamos configurando sua conta",
+	"onboarding.setting_up_subtitle": "Sua conta estará pronta em menos de um minuto!",
+	"onboarding.storage_zone": "Os seus dados serão alojados na Europa. Se desejar que seus dados sejam hospedados em outro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">preencha este formulário</a>.",
+	"onboarding.subtitle": "Algumas perguntas rápidas e começaremos.",
+	"onboarding.title": "👋​ Bem-vindo à Nuclia!",
+	"onboarding.updates": "Receba atualizações ocasionais sobre Nuclia",
+	"onboarding.use_case.ai_training": "Treinamento de modelo de IA",
+	"onboarding.use_case.global_search": "Pesquisa global de sites",
+	"onboarding.use_case.other": "De outros",
+	"onboarding.use_case.research_analysis": "Pesquisa e Análise",
+	"onboarding.use_case.support": "Suporte ao cliente/funcionário",
+	"onboarding.use_case.workspace_search": "Pesquisa de espaço de trabalho",
+	"onboarding.use_case_label": "Qual é o seu principal caso de uso?",
+	"recover.description": "Perdeu sua senha? Vamos consertar isso. Basta inserir o endereço de e-mail com o qual você se registrou e iniciaremos o procedimento de recuperação.",
+	"recover.gologin": "Vá para a página de login",
+	"recover.gologin_help": "Você se lembra da sua senha?",
+	"recover.recover": "Recuperar",
+	"recover.title": "Recupere sua senha",
+	"recover.verify": "Verifique seu e-mail e use o link fornecido para alterar sua senha",
+	"validation.company-email": "Use um e-mail corporativo",
+	"validation.email": "Entre com um email válido",
+	"validation.password_minlength": "A senha deve ter pelo menos 8 caracteres",
+	"validation.password_mismatch": "Senha não corresponde",
+	"validation.password_required": "Escolha uma senha",
+	"validation.required": "Campo obrigatório",
+	"validation.required_short": "Requeridos"
 }
